--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
     padding: 0;
     max-width: 700px;
     margin-left: 20px;
+
     
 }
 .item{
@@ -110,7 +111,8 @@ img{
 }
 @media screen and (max-width:600px) {
     .container{
-
+        max-width: 300px;
+      
     }
     .note-head{
         flex-direction: column;
