--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,9 @@ img{
 }
 @media screen and (max-width:600px) {
     .container{
-        max-width: 300px;
+        max-width: 250px;
+        min-width: 250px;
+        margin-right: 10px;
       
     }
     .note-head{
