--- a/styles.css
+++ b/styles.css
@@ -111,10 +111,8 @@ img{
 }
 @media screen and (max-width:600px) {
     .container{
-        max-width: 250px;
-        min-width: 250px;
-        margin-right: 10px;
-      
+      grid-template-columns: 450px;
+      max-width: 450px;
     }
     .note-head{
         flex-direction: column;
