--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 *, *::after,*::before{
     box-sizing: border-box;
 }
+body{
+    display: flex;
+    justify-content: center;
+    align-items:center ;
+    height: 100vh;
+}
 .container{
     display: grid;
     grid-template-columns:1fr;
